packages/store/kustomize/overlays/production/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: next-store-virtualservice
  namespace: default
spec:
  gateways:
  - admin-gateway
  hosts:
  - "*.new.meepshop.com"
  http:
  - match:
    - uri:
        prefix: /checkout/thank-you-page
    route:
    - destination:
        host: next-store
        port:
          number: 14401
  - match:
    - queryParams:
        resetCart:
          regex: "^(true|false)$"
    route:
    - destination:
        host: cart-generator
        port:
          number: 14401
  - route:
    - destination:
        host: storefront-reverse-proxy
        port:
          number: 8080
